--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,11 +14,18 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_login">Login</string>
+    <string name="menu_profile">Perfil</string>
+    <string name="menu_me">Mis artículos</string>
+    <string name="menu_about">Quienes somos</string>
+    <string name="menu_terms">Términos y legales</string>
+    <string name="menu_close">Cerrar sesión</string>
+
+    <string name="url">url</string>
+
+    <string name="see_more">Ver más...</string>
+    <string name="link_about">Link</string>
+    <string name="public_url">Publicar</string>
 
     <string name="welcome">Bienvenido</string>
     <string name="cancel_login">Se canceló la operación</string>
