--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_home">Articulos</string>
     <string name="menu_login">Login</string>
     <string name="menu_profile">Perfil</string>
     <string name="menu_me">Mis artículos</string>
