--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="menu_terms">Términos y legales</string>
     <string name="menu_close">Cerrar sesión</string>
 
-    <string name="url">url</string>
+    <string name="url">Pegar url</string>
 
     <string name="see_more">Ver más...</string>
     <string name="link_about">Link</string>
