--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,10 @@
     <string name="nav_header_desc">Scrum</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Articulos</string>
+    <string name="menu_home">Inicio</string>
     <string name="menu_login">Login</string>
     <string name="menu_profile">Perfil</string>
-    <string name="menu_me">Mis artículos</string>
+    <string name="menu_me">Mis publicaciones</string>
     <string name="menu_about">Quienes somos</string>
     <string name="menu_terms">Términos y legales</string>
     <string name="menu_close">Cerrar sesión</string>
@@ -31,7 +31,7 @@
 
     <string name="see_more">Ver más...</string>
     <string name="link_about">Link</string>
-    <string name="open_public_url">¿Desea agregar un artículo?</string>
+    <string name="open_public_url">¿Desea calificar una publicación de internet?</string>
 
     <string name="cancel_public_url">Cancelar</string>
     <string name="add_public_url">Publicar</string>
