--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ScrumProyect</string>
+    <string name="app_name">Agilidad sin humo</string>
     <string name="facebook_app_id">2604138186476057</string>
     <string name="fb_login_protocol_scheme">fb2604138186476057</string>
 
